--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,25 @@
 {
-	"name": "cakedc/search",
+	"name": "jmenges/search",
 	"description": "Search Plugin for CakePHP",
 	"type": "cakephp-plugin",
-	"keywords": ["cakephp", "search", "prg", "post-redirect-get", "filter"],
-	"homepage": "http://github.com/CakeDC/search",
+	"keywords": ["cakephp", "search", "prg", "post-redirect-get", "filter", "regex"],
+	"homepage": "http://github.com/jmenges/search",
 	"license": "MIT",
 	"authors": [
 		{
 			"name": "Cake Development Corporation",
 			"email": "team@cakedc.com",
 			"homepage": "http://cakedc.com"
+		},
+		{
+			"name": "Jonas Menges",
+			"email": "dev.menges.jonas@gmail.com",
 		}
 	],
 	"support": {
-		"email": "team@cakedc.com",
-		"issues": "https://github.com/CakeDC/search/issues",
-		"forum": "http://stackoverflow.com/tags/cakedc",
-		"wiki": "https://github.com/CakeDC/search/blob/master/Docs/Home.md",
-		"irc": "irc://irc.freenode.org/cakephp",
-		"source": "https://github.com/CakeDC/search"
+		"email": "dev.menges.jonas@gmail.com",
+		"issues": "https://github.com/jmenges/search/issues",
+		"source": "https://github.com/jmenges/search"
 	},
 	"require": {
 		"php": ">=5.4.16",
