--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		},
 		{
 			"name": "Jonas Menges",
-			"email": "dev.menges.jonas@gmail.com",
+			"email": "dev.menges.jonas@gmail.com"
 		}
 	],
 	"support": {
